test: add an integration test for the package (#11)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,12 @@ filter_files = true
 force_single_line = true
 line_length = 120
 profile = "black"
+
+[tool.pytest.ini_options]
+addopts = "--cov=model_manipulation_software --cov-report term-missing --strict-markers"
+markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"'"]
+
+[tool.coverage.run]
+omit = [
+	"*/__version__.py"
+]
