--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
-flake8==4.0.1
+flake8==6.0.0
 flake8-bugbear==22.3.23
 black==22.3.0
 isort==5.10.1
@@ -9,3 +9,6 @@ pytest-cov==3.0.0
 pandas-stubs==1.2.0.57
 nbmake==1.3.0
 torch==1.8.1
+nbconvert==7.2.7
+autoflake==2.0.0
+docformatter==1.5.1
