--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,11 +22,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
           pip install -e .
-      - name: Check formatting - Black
-        run: black --check --diff .
-      - name: Check formatting - Isort
-        run: isort --check .
-      - name: Lint - Flake8
-        run: flake8 .
-      - name: Check typing - Mypy
-        run: mypy .
+      - name: run pre-commit checks
+        run: make lint
