add tests to CI
Signed-off-by: Fabien Gelus <fabien.gelus@owkin.com>

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,3 +24,5 @@ jobs:
           pip install -e .
       - name: run pre-commit checks
         run: make lint
+      - name: run tests
+        run: make test
